fixed particle scrollbar zoom, added scrollbar

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -75,6 +75,7 @@ small {
     height: 100%;
     position: absolute;
     transition: all 0.3s;
+    overflow: hidden;
 }
 #particles.active {
     height: 40%;
@@ -99,11 +100,6 @@ small {
 }
 */
 
-#sidebar::before {
-    border-radius: 100% 50%;
-}
-
-
 #sidebar {
     margin-top: 100vh;
     width: 100%;
@@ -120,6 +116,9 @@ small {
 }
 #sidebar.active {
     margin-top: 0px;
+}
+.sidebar-content{
+    height:55vh;
 }
 
 
